Responsiveness and design modification

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" rel="stylesheet"/>
     <link href="assets/css/custom.css" rel="stylesheet" />
 </head>
 
@@ -134,51 +135,51 @@
             </div>
             <div class="row mgb-3">
                 <div class="col-md-4">
-                    <div class="black-rec-active mgb-4">
+                    <div class="black-rec changebg mgb-4">
                         <div class="sec3disp">
-                            <img class="circle-icon whitebg" src="assets/img/wordpress.png" alt="" />
+                            <i class="circle-icon whitebg fab fa-wordpress-simple"></i>
                         </div>
                         <p>Wordpress</p>
-                        <img class="arrow-design" src="assets/img/arrow.png" alt="" />
+                        <i class="fa fa-long-arrow-alt-right "></i> 
                     </div>
-                    <div class="black-rec">
+                    <div class="black-rec changebg">
                         <div class="sec3disp">
-                            <img class="circle-icon" src="assets/img/css.png" alt="" />
+                            <i class="circle-icon whitebg fab fa-css3"></i>
                         </div>
                         <p>CSS</p>
-                        <img class="arrow-design" src="assets/img/orange-arrow.png" alt="" />
+                        <i class="fa fa-long-arrow-alt-right "></i> 
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="black-rec mgb-4">
+                    <div class="black-rec changebg mgb-4">
                         <div class="sec3disp">
-                            <img class="circle-icon" src="assets/img/html.png" alt="" />
+                            <i class="circle-icon whitebg fas fa-code"></i>
                         </div>
                         <p>HTML</p>
-                        <img class="arrow-design" src="assets/img/orange-arrow.png" alt="" />
+                        <i class="fa fa-long-arrow-alt-right "></i> 
                     </div>
-                    <div class="black-rec">
+                    <div class="black-rec changebg">
                         <div class="sec3disp">
-                            <img class="circle-icon" src="assets/img/html.png" alt="" />
+                            <i class="circle-icon whitebg fas fa-code"></i>
                         </div>
                         <p>PHP</p>
-                        <img class="arrow-design" src="assets/img/orange-arrow.png" alt="" />
+                        <i class="fa fa-long-arrow-alt-right "></i> 
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="black-rec mgb-4">
+                    <div class="black-rec changebg mgb-4">
                         <div class="sec3disp">
-                            <img class="circle-icon" src="assets/img/coding.png" alt="" />
+                            <i class="circle-icon whitebg fas fa-laptop-code"></i>
                         </div>
                         <p>Web Developement</p>
-                        <img class="arrow-design" src="assets/img/orange-arrow.png" alt="" />
+                        <i class="fa fa-long-arrow-alt-right "></i> 
                     </div>
-                    <div class="black-rec">
+                    <div class="black-rec changebg">
                         <div class="sec3disp">
-                            <img class="circle-icon" src="assets/img/problem_solving.png" alt="" />
+                            <i class="circle-icon whitebg fas fa-puzzle-piece"></i>
                         </div>
                         <p>Problem Solving</p>
-                        <img class="arrow-design" src="assets/img/orange-arrow.png" alt="" />
+                        <i class="fa fa-long-arrow-alt-right "></i>
                     </div>
                 </div>
             </div>
@@ -204,7 +205,7 @@
                             <h2>50+</h2>
                             <p>Clients</p>
                         </div>
-                        <div class="col-md-4 col-md-offset-2 orangesqr">
+                        <div class="col-md-4 col-md-offset-2 blacksqr">
                             <h2>68</h2>
                             <p>Projects</p>
                         </div>
@@ -235,32 +236,84 @@
             </div>
             <div class="row mgb-4">
                 <div class="col-md-4">
-                    <img class="img-responsive " src="assets/img/sec5-1img.png" alt="" />
+                    <div class="container">
+                        <img class="img-responsive" src="assets/img/sec5-1img.png" alt="" />
+                        <div class="orangebg-overlay">
+                            <h3>Application Development</h3>
+                            <p class="mgb-4">HTML, CSS, jQuery</p>
+                            <p>Lorem ipsum dolor sit amet,Stet clita kasd lorem ipsum dolor sit amet. sed diam eirmod
+                                tempor
+                                dolore.</p>
+                            <img src="assets/img/arrow.png" alt="" />
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-4">
-                    <img class="img-responsive" src="assets/img/sec5-2img.png" alt="" />
-
+                    <div class="container">
+                        <img class="img-responsive" src="assets/img/sec5-2img.png" alt="" />
+                        <div class="orangebg-overlay">
+                            <h3>Application Development</h3>
+                            <p class="mgb-4">HTML, CSS, jQuery</p>
+                            <p>Lorem ipsum dolor sit amet,Stet clita kasd lorem ipsum dolor sit amet. sed diam eirmod
+                                tempor
+                                dolore.</p>
+                            <img src="assets/img/arrow.png" alt="" />
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-4">
-                    <img class="img-responsive" src="assets/img/sec5-3img.png" alt="" />
+                    <div class="container">
+                        <img class="img-responsive" src="assets/img/sec5-3img.png" alt="" />
+                        <div class="orangebg-overlay">
+                            <h3>Application Development</h3>
+                            <p class="mgb-4">HTML, CSS, jQuery</p>
+                            <p>Lorem ipsum dolor sit amet,Stet clita kasd lorem ipsum dolor sit amet. sed diam eirmod
+                                tempor
+                                dolore.</p>
+                            <img src="assets/img/arrow.png" alt="" />
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row mgb-4">
                 <div class="col-md-4">
-                    <img class="img-responsive" src="assets/img/sec5-4img.png" alt="" />
+                    <div class="container">
+                        <img class="img-responsive" src="assets/img/sec5-4img.png" alt="" />
+                        <div class="orangebg-overlay">
+                            <h3>Application Development</h3>
+                            <p class="mgb-4">HTML, CSS, jQuery</p>
+                            <p>Lorem ipsum dolor sit amet,Stet clita kasd lorem ipsum dolor sit amet. sed diam eirmod
+                                tempor
+                                dolore.</p>
+                            <img src="assets/img/arrow.png" alt="" />
+                        </div>
+                    </div>
                 </div>
                 <div class="col-md-4 cal-box">
-                    <img class="img-responsive" src="assets/img/sec5-5img.png" alt="" />
-                    <div class="orangebg">
-                        <h3>Application Development</h3>
-                        <p class="mgb-4">HTML, CSS, jQuery</p>
-                        <p>Lorem ipsum dolor sit amet,Stet clita kasd lorem ipsum dolor sit amet. sed diam eirmod tempor
-                            dolore.</p>
-                        <img src="assets/img/arrow.png" alt="" />
+                    <div class="container">
+                        <img class="img-responsive" src="assets/img/sec5-5img.png" alt="" />
+                        <div class="orangebg-overlay">
+                            <h3>Application Development</h3>
+                            <p class="mgb-4">HTML, CSS, jQuery</p>
+                            <p>Lorem ipsum dolor sit amet,Stet clita kasd lorem ipsum dolor sit amet. sed diam eirmod
+                                tempor
+                                dolore.</p>
+                            <img src="assets/img/arrow.png" alt="" />
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <img class="img-responsive" src="assets/img/sec5-6img.png" alt="" />
+                    <div class="container">
+                        <img class="img-responsive" src="assets/img/sec5-6img.png" alt="" />
+                        <div class="orangebg-overlay">
+                            <h3>Application Development</h3>
+                            <p class="mgb-4">HTML, CSS, jQuery</p>
+                            <p>Lorem ipsum dolor sit amet,Stet clita kasd lorem ipsum dolor sit amet. sed diam eirmod
+                                tempor
+                                dolore.</p>
+                            <img src="assets/img/arrow.png" alt="" />
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="outer-row">
@@ -283,11 +336,16 @@
                     <img src="assets/img/left-quote.png" alt="" />
                     <h3 class="sec6name">John Doe</h3>
                     <p class="mgb-4 sec6para">CEO Company</p>
-                    <p class="sec6para">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-                        praesentium voluptatum
-                        deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non
-                        provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et
-                        dolorum fuga. Et harum quidem rerum facilis.</p>
+                    <div class="row">
+                        <div class="col-md-offset-3 col-md-6 col-md-offset-3">
+                            <p class="sec6para">At vero eos et accusamus et iusto odio dignissimos ducimus qui
+                                blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
+                                excepturi sint occaecati
+                                cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi,
+                                id est laborum
+                                et dolorum fuga. Et harum quidem rerum facilis.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -353,7 +411,7 @@
                         or conceptual?</p>
                     <div class="row mgb-4 txt-sm-cent">
                         <div class="col-md-2">
-                            <i class="contact-icon fa fa-phone"></i>
+                            <i class="contact-icon fas fa-phone-alt"></i>
                         </div>
                         <div class="col-md-8">
                             <p class="sec8parag">Call Me</p>
@@ -363,7 +421,7 @@
 
                     <div class="row mgb-4 txt-sm-cent">
                         <div class="col-md-2">
-                            <i class="contact-icon fa fa-envelope-o"></i>
+                            <i class="contact-icon far fa-envelope"></i>
                         </div>
                         <div class="col-md-8">
                             <p class="sec8parag">Email</p>
@@ -373,7 +431,7 @@
 
                     <div class="row mgb-5 txt-sm-cent">
                         <div class="col-md-2">
-                            <i class="contact-icon fa fa-map-marker"></i>
+                            <i class="contact-icon fas fa-map-marker-alt"></i>
                         </div>
                         <div class="col-md-8">
                             <p class="sec8parag">Address</p>
@@ -382,14 +440,14 @@
                     </div>
                     <div class="mgb-4 txt-sm-cent">
                         Find Me on
-                        
+
                     </div>
                     <div class="mgb-5 item-sm-cent">
                         <img class="social-icons" src="assets/img/behance.png" alt="Snow" height="24px" />
                         <img class="social-icons" src="assets/img/dribbble.png" alt="Forest" />
                         <img class="social-icons" src="assets/img/insta.png" alt="Mountains" />
                         <img class="social-icons" src="assets/img/linked in.png" alt="Mountains" />
-                        <img class="social-icons" src="assets/img/pinterest.png" alt="Mountains" />    
+                        <img class="social-icons" src="assets/img/pinterest.png" alt="Mountains" />
                     </div>
 
                 </div>
