Contact section icon changed

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
                         or conceptual?</p>
                     <div class="row mgb-4 txt-sm-cent">
                         <div class="col-md-2">
-                            <i class="contact-icon fas fa-phone-alt"></i>
+                            <i class="contact-icon fas fa-phone-volume"></i>
                         </div>
                         <div class="col-md-8">
                             <p class="sec8parag">Call Me</p>
