--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>XD To HTML</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon_io/favicon-32x32.png">
 
     <!-- Bootstrap -->
     <link href="assets/library/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
@@ -203,7 +204,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6">
-                    <img class="sec4img" src="assets/img/sec4img.png" alt="">
+                    <div class="col-pad">
+                        <img class="sec4img" src="assets/img/sec4img.png" alt="">
+                    </div>
                 </div>
                 <div class="col-sm-6">
                     <h3 class="common-heading">More Reasons to Choose Me</h3>
